corrected spelling of developing

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "wip-Avanced Training Developmening Workflows"
+title:  "wip-Avanced Training Developing Workflows"
 date: 2022-04-13
 main_menu: courses
 permalink: /:year/:title
