added pm to last section

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -406,7 +406,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
   </thead>
   <tbody>
     <tr>
-      <th scope="row">AM session
+      <th scope="row">AM-PM session
       <br>
      </th>
       <td>    <ul>
