updated path for snakemake image

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -53,7 +53,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
         </div>
     </div>
          <div class="col-sm-2">
-        <div><img alt="..." src="{{ site.baseurl }}img/snakemake.png" width="100%" />
+        <div><img alt="..." src="/ngs-academy/img/snakemake.png" width="100%" />
             <!-- <p class="small"> Source: CBIO UCT</p> -->
         </div>
     </div>
