--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -294,7 +294,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
  
 </ul></td>
             <td><ul>
-             <li>Dr Phillip Ashton</li>
+             <li>Dr Philip Ashton</li>
  
 </ul></td>
     </tr>
@@ -319,7 +319,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
             <td> <ul>
             
-  <li>Dr Phillip Ashton</li>
+  <li>Dr Philip Ashton</li>
     
 </ul></td>
     </tr>
@@ -430,7 +430,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
             <td><ul>
              <li>Dr George Githinji</li>
-  <li>Dr Phillip Ashton</li>
+  <li>Dr Philip Ashton</li>
    
 </ul></td>
     </tr>
