adde correct link to software carpentry

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -133,7 +133,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul><!-- Tab panes -->
 <div class="tab-content">
 	<div class="tab-pane active" id="tabs-1" role="tabpanel">
-		<p>   <table class="table table-bordered">
+		<p>   <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -202,7 +202,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </table>    </p>
 	</div>
 	<div class="tab-pane" id="tabs-2" role="tabpanel">
-		<p> <table class="table table-bordered">
+		<p> <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -219,7 +219,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
       <td>    <ul>
       <li> Introduction to git.</li>
                      <ol>
-  <li>1. <a href="https://www.youtube.com/watch?v=Z1AlWEw4eEI&t=6s#0" target="_blank">Software carpentry</a> </li>
+  <li>1. <a href="https://verena90.github.io/2021-10-05-online-NGS_Academy/" target="_blank">Software carpentry</a> </li>
    <li>2. Scientific talk </li>
 
 </ol>
@@ -260,7 +260,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </p>
 	</div>
 	<div class="tab-pane" id="tabs-3" role="tabpanel">
-		<p>   <table class="table table-bordered">
+		<p>   <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -329,7 +329,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 	</div>
 
   	<div class="tab-pane" id="tabs-4" role="tabpanel">
-		<p> <table class="table table-bordered">
+		<p> <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -385,13 +385,12 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
       <td><ul>
   
-  <li>....</li>
  
-  <li>......</li>
+  <li>CGIAR</li>
 </ul></td>
             <td> <ul>
             
-  <li>Dr .....</li>
+  <li>Dr John Juma</li>
     
 </ul></td>
     </tr>
@@ -400,7 +399,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </table>  </p>
 	</div>
     	<div class="tab-pane" id="tabs-5" role="tabpanel">
-		<p> <table class="table table-bordered">
+		<p> <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
