--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -219,7 +219,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
       <td>    <ul>
       <li> Introduction to git.</li>
                      <ol>
-  <li>1. <a href="https://www.youtube.com/watch?v=Z1AlWEw4eEI&t=6s#0" target="_blank">Software carpentry</a> </li>
+  <li>1. <a href="https://verena90.github.io/2021-10-05-online-NGS_Academy/" target="_blank">Software carpentry</a> </li>
    <li>2. Scientific talk </li>
 
 </ol>
@@ -385,13 +385,13 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
       <td><ul>
   
-  <li>....</li>
+  <li>CGIAR</li>
  
-  <li>......</li>
+  
 </ul></td>
             <td> <ul>
             
-  <li>Dr .....</li>
+  <li>Dr John Juma</li>
     
 </ul></td>
     </tr>
