nothing to commit

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -133,7 +133,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul><!-- Tab panes -->
 <div class="tab-content">
 	<div class="tab-pane active" id="tabs-1" role="tabpanel">
-		<p>   <table class="table table-bordered">
+		<p>   <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -203,7 +203,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </table>    </p>
 	</div>
 	<div class="tab-pane" id="tabs-2" role="tabpanel">
-		<p> <table class="table table-bordered">
+		<p> <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -261,7 +261,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </p>
 	</div>
 	<div class="tab-pane" id="tabs-3" role="tabpanel">
-		<p>   <table class="table table-bordered">
+		<p>   <table class="table table-bordered table-responsive">
   <thead>
     <tr>
       <th scope="col">Session</th>
