added conda tutorial

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -149,7 +149,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
      </th>
       <td>    <ul>
       <li> <a href="#" target="_blank">Get setup working on the HPC set-up</a></li>
-        <li> <a href="#" target="_blank">Introduction to conda and conda environments</a></li>
+      <li> <a href="{{ site.url }}uploads/Cond_and_Conda_environments.pdf" target="_blank">Introduction to conda and conda environments.</a></li>
 <ol>
   <li>1. Miniconda installation</li>
   <li>2. Use of mamba instead</li>
