changed John's prefix

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -390,7 +390,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
             <td> <ul>
             
-  <li>Dr John Juma</li>
+  <li>John Juma</li>
     
 </ul></td>
     </tr>
