--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -85,6 +85,14 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 
 <!-- <li><b>Notification date for successful Applicants:</b> </li> -->
 </ol>
+
+<b>Pre-requisite:</b> 
+
+<ol>
+<li>Participants are not expected to have a High Perfomance Computer as access to HPC resources from KEMRI will be provided by the Trainers
+</li>
+
+</ol>
 <b>Objectives and expected outcomes:</b> 
 
 <ol>
