--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title:  "wip-Advanced Training Developing Workflows"
+title:  "wip-Advanced Training: Developing Workflows"
 date: 2022-04-13
 main_menu: courses
 permalink: /:year/:title
-category: upcoming
+category: upcoming_wip
 course_overview : High-throughput laboratory machines generate large quantities of raw biological data.  Processing the data to generate useful information involves using several tools and sometimes setting up complex bioinformatics analysis environments across heterogeneous computing devices. Bioinformatics workflows and workflow managers allow reproducibility and portability of analysis plans and optimization of available computing resources.  We would like to develop and run an advanced  bioinformatics workflow workshop  aimed at introducing and deploying Nextflow, a tool that enables scalable and reproducible scientific workflows. 
 start_date: 2022-04-25
 end_date: 2022-04-29
@@ -33,27 +33,27 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 
 <div class="row">
     <div class="col-sm-2">
-        <div><img alt="..." src="{{ site.baseurl }}img/nextflow.png" width="100%" />
+        <div><img alt="..." src="/ngs-academy/img/nextflow.png" width="100%" />
             <!-- <p class="small"> Source: CBIO UCT</p> -->
         </div>
     </div>
     <div class="col-sm-2">
-        <div><img alt="..." src="{{ site.baseurl }}img/docker.png" width="100%" />
+        <div><img alt="..." src="/ngs-academy/img/docker.png" width="100%" />
             <!-- <p class="small"> Source: CBIO UCT</p> -->
         </div>
     </div>
     <div class="col-sm-2">
-        <div><img alt="..." src="{{ site.baseurl }}img/git.png" width="100%" />
+        <div><img alt="..." src="/ngs-academy/img/git.png" width="100%" />
             <!-- <p class="small"> Source: CBIO UCT</p> -->
         </div>
     </div>
     <div class="col-sm-2">
-        <div><img alt="..." src="{{ site.baseurl }}img/HPC.jpg" width="100%" />
+        <div><img alt="..." src="/ngs-academy/img/HPC.jpg" width="100%" />
             <!-- <p class="small"> Source: CBIO UCT</p> -->
         </div>
     </div>
-      <div class="col-sm-2">
-        <div><img alt="..." src="{{ site.baseurl }}img/snakemake.png" width="100%" />
+         <div class="col-sm-2">
+        <div><img alt="..." src="/ngs-academy/img/snakemake.png" width="100%" />
             <!-- <p class="small"> Source: CBIO UCT</p> -->
         </div>
     </div>
@@ -85,14 +85,16 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 
 <!-- <li><b>Notification date for successful Applicants:</b> </li> -->
 </ol>
-<b>Objectives and expected outcomes:</b> 
+
 <b>Pre-requisite:</b> 
 
 <ol>
-<li>Participants are not expected to have a High Perfomance Computer as access to HPC resources from KEMRI will be provided by the Trainers
+<li>For the course, participants do not need a high-performance computer since the trainers will provide access to KEMRI's cluster
 </li>
 
 </ol>
+<b>Objectives and expected outcomes:</b> 
+
 <ol>
 <li>Objectives and outcomes Objectives and outcomesObjectives and outcomesObjectives and outcomesObjectives and outcomesObjectives and outcomesObjectives and outcomes
 </li>
@@ -155,7 +157,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
      </th>
       <td>    <ul>
       <li> <a href="#" target="_blank">Get setup working on the HPC set-up</a></li>
-         <li> <a href="{{ site.url }}uploads/Cond_and_Conda_environments.pdf" target="_blank">Introduction to conda and conda environments.</a></li>
+      <li> <a href="{{ site.url }}uploads/Cond_and_Conda_environments.pdf" target="_blank">Introduction to conda and conda environments.</a></li>
 <ol>
   <li>1. Miniconda installation</li>
   <li>2. Use of mamba instead</li>
@@ -191,11 +193,12 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ol> 
 </ul></td>
       <td><ul>
-  
-  <li>MRIGlobal
+
+   <li>KEMRI
 </li>
-  <li>KEMRI
+ <li>MRIGlobal
 </li>
+
 </ul></td>
             <td> <ul>
             
@@ -300,7 +303,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
  
 </ul></td>
             <td><ul>
-             <li>Dr Phillip Ashton</li>
+             <li>Dr Philip Ashton</li>
  
 </ul></td>
     </tr>
@@ -325,7 +328,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
             <td> <ul>
             
-  <li>Dr Phillip Ashton</li>
+  <li>Dr Philip Ashton</li>
     
 </ul></td>
     </tr>
@@ -335,7 +338,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 	</div>
 
   	<div class="tab-pane" id="tabs-4" role="tabpanel">
-		<p> <table class="table table-bordered table-responsive">
+		<p> <table class="table table-bordered">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -391,8 +394,9 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
       <td><ul>
   
- 
   <li>CGIAR</li>
+ 
+  
 </ul></td>
             <td> <ul>
             
@@ -405,7 +409,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </table>  </p>
 	</div>
     	<div class="tab-pane" id="tabs-5" role="tabpanel">
-		<p> <table class="table table-bordered table-responsive">
+		<p> <table class="table table-bordered">
   <thead>
     <tr>
       <th scope="col">Session</th>
@@ -435,7 +439,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 </ul></td>
             <td><ul>
              <li>Dr George Githinji</li>
-  <li>Dr Phillip Ashton</li>
+  <li>Dr Philip Ashton</li>
    
 </ul></td>
     </tr>
