updated pre-requisite text

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -89,7 +89,7 @@ The NGS Academy forms part of the Africa CDC Pathogen Genomics Initiative (PGI).
 <b>Pre-requisite:</b> 
 
 <ol>
-<li>Participants are not expected to have a High Perfomance Computer as access to HPC resources from KEMRI will be provided by the Trainers
+<li>For the course, participants do not need a high-performance computer since the trainers will provide access to KEMRI's cluster
 </li>
 
 </ol>
