--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title:  "Advanced Training: Developing Workflows"
-date: 2022-04-13
+posted_date: 2022-04-13
 main_menu: courses
 permalink: /:year/:title
 category: upcoming7
