added quotes on dates

--- a/_posts/2022-04-13-wip-ADTDW.md
+++ b/_posts/2022-04-13-wip-ADTDW.md
@@ -1,13 +1,13 @@
 ---
 layout: default
 title:  "Advanced Training: Developing Workflows"
-posted_date: 2022-04-13
+posted_date: "2022-04-13"
 main_menu: courses
 permalink: /:year/:title
 category: upcoming7
 course_overview : High-throughput laboratory machines generate large quantities of raw biological data.  Processing the data to generate useful information involves using several tools and sometimes setting up complex bioinformatics analysis environments across heterogeneous computing devices. Bioinformatics workflows and workflow managers allow reproducibility and portability of analysis plans and optimization of available computing resources.  We would like to develop and run an advanced  bioinformatics workflow workshop  aimed at introducing and deploying Nextflow, a tool that enables scalable and reproducible scientific workflows. 
-start_date: 2022-04-25
-end_date: 2022-04-29
+start_date: "2022-04-25"
+end_date: "2022-04-29"
 group: group1
 ---
   
